# aquest_code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  old_commentaries
ai/: ai_system.h  build_subsystem.cpp  build_subsystem.h  path_container.cpp  path_container.h  path_finding_data.cpp  path_finding_data.h  sub_system.h
battle/: lua_states.cpp  map.cpp  map_enum.h  state.h  structures.cpp  structures_enum.h  troop_parser.cpp  troop_type_parser.cpp  unit_state_parser.cpp  unit_states_container.cpp  unit_states_container.h  unit_type_parser.h
core/: army.cpp  army.h  biome.cpp  biome.h  building_type.cpp  building_type.h  casus_belli.cpp  casus_belli.h  casus_belli_data_macro.h  character.cpp  character.h  character_data_parser.cpp  city.cpp  city.h  city_type.cpp  city_type.h  context.cpp  context.h  control_functions.cpp  control_functions.h  culture.cpp  culture.h  decision.cpp  decision.h  declare_structures.h  declare_structures_table.cpp  declare_structures_table.h  diplomacy.cpp  diplomacy.h  event.cpp  event.h  generator_begin.cpp  generator_begin.h  hero_troop.cpp  hero_troop.h  interaction.cpp  interaction.h  interaction_filter_functions.cpp  interaction_filter_functions.h  internal_lua_state.cpp  (+38 more)
lua_scripts/: background_image.lua  battle_map_begin.lua  biomes_config.lua  city_types_config.lua  culture_config.lua  culture_group_config.lua  decision_thoughts.lua  entities_types_table.lua  error.txt  gen_part1.lua  gen_part1_functions.lua  gen_part2.lua  gen_part2_functions.lua  gen_part3.lua  gen_part3_functions.lua  generator_config.lua  maf.lua  (+21 more)
src/ai/: CMakeLists.txt  ai_system.h  sub_system.cpp
src/battle/: CMakeLists.txt  context.cpp  context.h  lua_states.cpp  lua_states.h  map.h  render_stages.cpp  render_stages.h  structures.cpp  structures.h  troop_parser.h  troop_type_parser.cpp  unit_state_parser.cpp  unit_state_parser.h  unit_type_parser.cpp
src/core/: CMakeLists.txt  army.cpp  army.h  biome.cpp  biome.h  building_type.cpp  building_type.h  casus_belli.cpp  casus_belli.h  character.cpp  character.h  city.cpp  city.h  city_type.cpp  city_type.h  context.cpp  control_functions.cpp  culture.cpp  culture.h  decision.cpp  decision.h  diplomacy.cpp  diplomacy.h  event.cpp  event.h  generator_begin.cpp  hero_troop.h  hero_type.h  interaction.cpp  interaction.h  internal_lua_state.cpp  internal_lua_state.h  law.cpp  map.cpp  map.h  modificator.cpp  modificator.h  province.cpp  province.h  realm.cpp  (+23 more)
src/lua_init/: CMakeLists.txt  lua_initialization.cpp  lua_initialization_battle_generator_functions.cpp  lua_initialization_battle_map.cpp  lua_initialization_battle_unit.cpp  lua_initialization_calendar.cpp  lua_initialization_constants.cpp  lua_initialization_core_loading.cpp  lua_initialization_game_context.cpp  lua_initialization_game_logic.cpp  lua_initialization_generator_container.cpp  lua_initialization_handle_types.h  lua_initialization_hidden.h  lua_initialization_input.cpp  lua_initialization_interface_utils.cpp  lua_initialization_internal.h  lua_initialization_internal_building_type.cpp  lua_initialization_internal_casus_belli.cpp  lua_initialization_internal_character.cpp  lua_initialization_internal_city.cpp  lua_initialization_internal_city_type.cpp  lua_initialization_internal_culture.cpp  lua_initialization_internal_decision.cpp  lua_initialization_internal_faction.cpp  lua_initialization_internal_modificator.cpp  lua_initialization_internal_province.cpp  lua_initialization_internal_religion.cpp  lua_initialization_internal_titulus.cpp  lua_initialization_internal_war.cpp  lua_initialization_localization.cpp  lua_initialization_main_menu.cpp  lua_initialization_noiser.cpp  lua_initialization_package.cpp  lua_initialization_progress_container.cpp  lua_initialization_random_engine.cpp  lua_initialization_safe_utils.cpp  lua_initialization_script_utils.cpp  lua_initialization_selection.cpp  lua_initialization_settings.cpp  lua_initialization_tiles.cpp  (+3 more)
src/render/: CMakeLists.txt  MemoryPool.h  command_buffer.h  container.cpp  container.h  container_view.cpp  container_view.h  context.h  copy_stage.h  heraldy.h  image_container.cpp  image_controller.cpp  image_controller.h  makers.cpp  map_data.h  nuklear_header.h  particles.cpp  particles.h  persistent_resources.cpp  persistent_resources.h  pipeline_mode_updater.cpp  push_constant_data.h  queue.h  render.cpp  render_mode_container.cpp  shared_battle_structures.h  shared_particles_structures.h  shared_render_utility.h  shared_structures.h  slots.cpp  slots.h  stages.cpp  stages.h  target.h  utils.cpp  vk_mem_alloc_impl.cpp  vulkan_declarations.h  vulkan_hpp_header.h  window.cpp
src/render/vk_mem_alloc/: vk_mem_alloc_funcs.hpp
src/script/: CMakeLists.txt  action_functions.cpp  action_functions.h  all_commands_macro.h  change_context_commands.cpp  common_commands.cpp  common_commands.h  condition_command_list_tmp.txt  condition_commands_macro.h  container.h  context.cpp  context.h  core.cpp  core.h  functions_init.cpp  functions_init.h  get_scope_commands.cpp  get_scope_commands.h  get_scope_commands_macro.h  header.h  init_functions.cpp  interface.h  iterator_funcs.cpp  iterator_funcs.h  logic_commands.cpp  logic_commands.h  numeric_commands_macro.h  numeric_functions.cpp  numeric_functions.h  object.cpp  object.h  object1.h  system.cpp  system.h  templates.h  type_info.cpp  type_info.h  type_traits.h
src/tests/: CMakeLists.txt  script_tests.cpp
src/utils/: CMakeLists.txt  array_view.h  astar_search.h  astar_search_mt.cpp  concurrent_vector.h  constexpr_funcs.h  deferred_tasks.cpp  deferred_tasks.h  demiurge.cpp  demiurge.h  frame_allocator.cpp  frame_allocator.h  frame_time.cpp  game_context.h  game_enums.h  globals.cpp  globals.h  handle.h  id.h  input.h  interface_container2.cpp  linear_rng.h  list.h  localization_container.h  lua_environment.cpp  main_menu.cpp  murmur.cpp  perlin.cpp  pod_container.h  prime_numbers.cpp  prime_numbers.h  quest_states.cpp  quest_states.h  ray.h  render_modes.h  salsa20.cpp  salsa20.h  serializator_helper.cpp  serializator_helper.h  settings.cpp  (+19 more)
(+375 files in other folders)
